+ Fixes in the routines that deal with pathnames: it is now possible to use *DEFAULT-PATHNAME-DEFAULTS* as current working directory, because it is set to the initial directory and because it can be updated with SI::CHDIR. + Pathname versions are now properly handled and printed. At least for logical pathnames, because physical namestrings cannot have version numbers. + An error is signaled when one tries to print _readably_ a pathname that does not have a namestring such that parsing this namestring produces the same pathname. This happens, for instance, with pathnames that do not have hosts, or that have version numbers and are not logical. + Fixes in the CLOS subsystem: ADD-METHOD and REMOVE-METHOD now update the GENERIC-FUNCTION slot of method objects, and output the right values. It is now possible to use two nested SYMBOL-MACROLET that define the same symbols.

--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -1748,6 +1748,14 @@ ECL 0.9d
 
 * Visible changes:
 
+  - ECL now distinguishes between the current working directory of the
+    C library (obtained by SI::GETCWD and changed with SI::CHDIR) and
+    the directory for the lisp environment (the value of
+    *DEFAULT-PATHNAME-DEFAULTS*). The internal routine SI::CHDIR now
+    takes arguments: the new directory, and an optional boolean
+    that determines whether *DEFAULT-PATHNAME-DEFAULTS* is also to be
+    changed (defaults to true).
+
   - New command line options -shell and -norc, which are useful for
     scripting. New and more robust handling of command line options,
     permits combining (and repeating) the options -load, -eval, -shell
