LOAD-LOGICAL-PATHNAME-TRANSLATIONS now implemented (uses sys:host.translation) WILD-PATHNAME-P implemented. PROBE-FILE and TRUENAME now complain when passed a pathname with wild components. Fixed a bug in GENTEMP. Some missing symbols are now defined (*PRINT-MARGIN*, etc), even though not used. Destructuring lambda lists now identify NIL or '() as an empty list. Fixed INTEGER-LENGTH and LOGCOUNT (they now work with bignums). SYMBOL-MACROLET now complains about redefinition of global variables. ENSURE-DIRECTORIES-EXIST now outputs the two requird values and produces some informative messages if requested.

--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -1741,6 +1741,9 @@ ECL 0.9d
   - COMPILE-FILE now handles files with relative pathnames (like
     "foo/faa.lsp").
 
+  - In destructuring lambda lists, () or NIL is understood as an empty
+    list.
+
 * Documentation:
 
   - New manual page documents the scripting facilities of ECL
@@ -1827,7 +1830,8 @@ ECL 0.9d
     class A and this class is renamed as B, the method still
     specializes on the same class.
 
-  - Implemented WILD-PATHNAME-P, and LOAD-LOGICAL-PATHNAME-TRANSLATIONS.
+  - Implemented WILD-PATHNAME-P, and LOAD-LOGICAL-PATHNAME-TRANSLATIONS
+    (which similar to CMUCL looks for the translations at sys:host.translation).
 
 TODO:
 =====
