--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -1750,6 +1750,8 @@ ECL 0.9d
   - The printer of floating point numbers was inaccurate and could not
     represent MOST-POSITIVE-LONG-FLOAT reliably.
 
+  - Assignments to structures were not properly compiled in unsafe mode.
+
 * Documentation:
 
   - New manual page documents the scripting facilities of ECL
@@ -1797,6 +1799,9 @@ ECL 0.9d
   - TRUENAME now merges a pathname with the current working directory
     when it has no directory of its own. Thus (TRUENAME #P"") is
     equivalent to (SI:GETCWD).
+
+  - The old CLX library has been replaced with the portable CLX
+    library from the CLOCC archive.
 
 * ANSI compatibility:
 
