+ Streams in ECL can now have element types CHARACTER, (UNSIGNED-BYTE 8) and (SIGNED-BYTE 8). LISTEN and PEEK-CHAR had to be modified so that they work with CONCATENATED-STREAMS. OPEN now signals errors of type FILE-ERROR when a file cannot be opened. + Several special functions (ASIN, ACOS, ASINH, ...) have been reimplemented using more stable formulas found in CMUCL, plus the functions from the C mathematical library. They also serve as examples of how to use FFI:C-INLINE. + Several errors regarding packages have been rewritten as correctable errors, and now the carry clearer messages. + In functions dealing with sequences, :COUNT can now be a bignum. + In the bytecodes compiler, MULTIPLE-VALUE-PROG1 did not save the values.

--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -1844,6 +1844,9 @@ ECL 0.9d
   - Implemented WILD-PATHNAME-P, and LOAD-LOGICAL-PATHNAME-TRANSLATIONS
     (which similar to CMUCL looks for the translations at sys:host.translation).
 
+  - Streams now can have element types CHARACTER, (SIGNED-BYTE 8) and
+    (UNSIGNED-BYTE 8).
+
 TODO:
 =====
 
