--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -1847,6 +1847,8 @@ ECL 0.9d
   - Streams now can have element types CHARACTER, (SIGNED-BYTE 8) and
     (UNSIGNED-BYTE 8).
 
+  - A VALUES form can now act as a place.
+
 TODO:
 =====
 
