Imported the PRETTY-PRINTER from CMUCL and integrated it with the previously commited format.lsp. The old pretty printer remains merged in and is used by default.

--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -1862,6 +1862,10 @@ ECL 0.9d
   - All non-graphic characters below (CODE-CHAR 128) have now
     character names.
 
+  - The pretty printer and the FORMAT routine from CMUCL have been
+    finally integrated and put together. By default, they are not
+    compiled in, unless configured with "--with-cmu-format".
+
 TODO:
 =====
 
