--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -1718,6 +1718,23 @@ ECL 0.9d
 	3
 	Top level.
 
+* System design: Compiler
+
+  - The optimizer for tail-recursive calls has been fixed. Formerly
+    the check for tail-recursion was based on names, and this produced
+    an infinite loop:
+	(labels ((f1 (x)
+		   (labels ((f1 (x) 2))
+		      (f1 x))))
+	  (f1 2))
+    Now the compiler recognizes that the first call to (f1 x) refers
+    the innermost function, and there is no tail recursion.
+
+  - The compiler now produces C functions with a fixed number of
+    arguments when the lisp function is not a closure and has no
+    &optional, &rest, &key or &allow-other-keys.
+
+  - MULTIPLE-VALUE-{BIND,SETQ} produce now more economical forms.
 
 * Errors fixed:
 
@@ -1751,16 +1768,6 @@ ECL 0.9d
     represent MOST-POSITIVE-LONG-FLOAT reliably.
 
   - Assignments to structures were not properly compiled in unsafe mode.
-
-  - The optimizer for tail-recursive calls has been fixed. Formerly
-    the check for tail-recursion was based on names, and this produced
-    an infinite loop:
-	(labels ((f1 (x)
-		   (labels ((f1 (x) 2))
-		      (f1 x))))
-	  (f1 2))
-    Now the compiler recognizes that the first call to (f1 x) refers
-    the innermost function, and there is no tail recursion.
 
 * Documentation:
 
