--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -1823,6 +1823,9 @@ ECL 0.9d
   - New command line option, -q, makes the compiler quieter (by Julian
     Stecklina).
 
+  - New function, SI:RUN-PROGRAM to spawn processes with redirected
+    input, output and error streams.
+
 * ANSI compatibility:
 
   - No symbol is exported from the CL package other than those specificied in
