--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -5,7 +5,12 @@ ECL 0.9f
 
  - Improvements in the efficiency of macro readers for #a() and #()
 
- - When supplied an :INITIAL-CONTENTS, MAKE-ARRAY now uses a more efficient algorithm.
+ - When supplied an :INITIAL-CONTENTS, MAKE-ARRAY now uses a more efficient
+   algorithm.
+
+* ANSI Compatibility:
+
+ - DEFSETF forms are enclosed in a block with the name of the accessor.
 
 ;;; Local Variables: ***
 ;;; mode:text ***
