--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -14,6 +14,9 @@ ECL 0.9f
 
 * Visible changes:
 
+ - Multithreaded ECL now in Windows, either with Microsoft VC++
+   or Mingw32 (M. Goffioul).
+
  - Improvements in the efficiency of macro readers for #a() and #()
 
  - When supplied an :INITIAL-CONTENTS, MAKE-ARRAY now uses a more efficient
