--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -40,6 +40,8 @@ ECL 0.9f
 
  - Configure option --with-clos-streams now defaults to true.
 
+ - When closing a composite stream, all references to its elements are now erased.
+
 * ANSI Compatibility:
 
  - DEFSETF forms are enclosed in a block with the name of the accessor.
