--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -25,6 +25,8 @@ ECL 0.9f
  - All strings in a pathname must be valid C strings, with a null terminating
    character and no fill pointer.
 
+ - "+nan" is no longer parsed as a number.
+
 * Visible changes:
 
  - Multithreaded ECL now in Windows, either with Microsoft VC++
@@ -46,6 +48,13 @@ ECL 0.9f
  - Configure option --with-clos-streams now defaults to true.
 
  - When closing a composite stream, all references to its elements are now erased.
+
+ - Backquote forms are now translated into lists containing the macros
+   EXT:QUASIQUOTE, EXT:UNQUOTE, EXT:UNQUOTE-SPLICE and EXT:UNQUOTE-NSPLICE.
+   At evaluation/compilation time, the macroexpander for QUASIQUOTE transforms
+   the tree into the appropiate lisp expression. Otherwise, the print
+   representation is preserved:
+	(format nil '`(foo ,@a)) => "`(foo ,@a)"
 
 * ANSI Compatibility:
 
