--- a/src/CHANGELOG
+++ b/src/CHANGELOG
@@ -72,6 +72,13 @@ ECL 0.9f
 
  - When *PRINT-READABLY*=T, vectors just print as arrays.
 
+* MOP Compatibility:
+
+ - We have implemented the *-SLOT-DEFINITION classes, as well as the protocol
+   for computing effective slot definitions from direct ones, and the methods
+   DIRECT/EFFECTIVE-SLOT-DEFINITION-CLASS. (Position field in slot-def. objects
+   still missing).
+
 * Contributed modules:
 
  - MIT test unit rt.lisp is now available as #p"sys:rt"
